--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.1",
-    "astro": "^3.6.3",
-    "typescript": "^5.3.2"
+    "astro": "^3.4.0",
+    "astro-icon": "^0.8.1",
+    "font-awesome": "^4.7.0",
+    "less": "^4.2.0",
+    "typescript": "^5.2.2"
   }
 }
